add ggtags to submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lisp/js2-mode"]
 	path = lisp/js2-mode
 	url = https://github.com/mooz/js2-mode.git
+[submodule "lisp/ggtags"]
+	path = lisp/ggtags
+	url = https://github.com/leoliu/ggtags.git
