--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
     - env: EVM_EMACS=emacs-git-snapshot-travis
 
 script:
-  lsb_release -a && ./test-startup.sh
+  lsb_release -a && sh ./test-startup.sh
 
 # Local Variables:
 # indent-tabs-mode: nil
